feat: 1.数据库改动:去除usage_log表，新增request_log和model_call_log，分别记录请求的完整链路和模型调用尝试;增加daily_stats表,用于加速初始化数据的速度以及按时间范围查询数据的速度;为 SQLite 补全关键复合索引 (channel_id,success, created_at)，彻底告警大数据量下的慢查询。 2.日志优化:增加完善的日志记录，可在控制台中清晰地看出请求的各个阶段及其耗时 3.UI/UX改动:统计页面上半部分展示当前接入的渠道数，请求全链路的平均响应时间，Token消耗，请求情况。可以根据时间设置统计范围。下半部分显示个渠道的调用次数和TOKEN的消耗情况,固定统计所有数据。